--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -26,3 +26,12 @@ jobs:
 
     - name: Test
       run: go test -v ./...
+
+    - name: Test Hello-action
+      id: hello
+      uses: Rosyrain/CI_test/actions/hello-world-docker-action@main
+      with:
+        who-to-greet: 'Rosyrain'
+
+    - name: Get the step-hello output
+      run: echo "The time was &{{ steps.hello.outputs.time }}
