--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -27,11 +27,20 @@ jobs:
     - name: Test
       run: go test -v ./...
 
-    - name: Test Hello-action
-      id: hello
+    - name: Test Docker Hello-action
+      id: docker_hello
       uses: Rosyrain/CI_test/actions/hello-world-docker-action@main
       with:
         who-to-greet: 'Rosyrain'
 
-    - name: Get the step-hello output
+    - name: Get the step-docker_hello output
+      run: echo "The time was ${{ steps.hello.outputs.time }}"
+
+    - name: Test JS Hello-action
+      id: js_hello
+      uses: Rosyrain/CI_test/actions/hello-world-js-action@main
+      with:
+        who-to-greet: 'Rosyrain'
+
+    - name: Get the step-js_hello output
       run: echo "The time was ${{ steps.hello.outputs.time }}"
