--- a/.github/workflows/issue_close_listener.yml
+++ b/.github/workflows/issue_close_listener.yml
@@ -8,22 +8,18 @@ jobs:
   check_issues:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v2
-
-      - name: Set up Go environment
-        uses: actions/setup-go@v2
-        with:
-          go-version: '1.22.3'
-
-      - name: Install dependencies
-        run: |
-          go get -u github.com/google/go-github/github
-
-      - name: Run script to check closed issues without PR
+#      - name: Checkout repository
+#        uses: actions/checkout@v2
+#
+#      - name: Set up Go environment
+#        uses: actions/setup-go@v2
+#        with:
+#          go-version: '1.22.3'
+      - name: Check closed issues without PR
         env:
+          OWNER: Rosyrain
+          REPOSITORY: github_action_test
+          ISUE_NUMBER: ${{ github.event.issue.number }}
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          REPO_OWNER: YOUR_REPO_OWNER
-          REPO_NAME: YOUR_REPO_NAME
-          ASSIGNEE: sukki37
-        run: |
+          ASSIGNEE: Rosyrain
+        uses: Rosyrain/CI_test/actions/issue-no_pr-action@master
