--- a/.github/workflows/issue_close_listener.yml
+++ b/.github/workflows/issue_close_listener.yml
@@ -8,13 +8,6 @@ jobs:
   check_issues:
     runs-on: ubuntu-latest
     steps:
-#      - name: Checkout repository
-#        uses: actions/checkout@v2
-#
-#      - name: Set up Go environment
-#        uses: actions/setup-go@v2
-#        with:
-#          go-version: '1.22.3'
       - name: Check closed issues without PR
         env:
           OWNER: Rosyrain
@@ -22,4 +15,4 @@ jobs:
           ISSUE_NUMBER: ${{ github.event.issue.number }}
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           ASSIGNEES: Rosyrain
-        uses: Rosyrain/CI_test/actions/issue-no_pr-action@master
+        uses: Rosyrain/CI_test@master
