--- a/.github/workflows/issue_close_listener.yml
+++ b/.github/workflows/issue_close_listener.yml
@@ -15,4 +15,4 @@ jobs:
           ISSUE_NUMBER: ${{ github.event.issue.number }}
           GITHUB_TOKEN: ${{ secrets.TOKEN }}
           ASSIGNEES: Rosyrain
-        uses: Rosyrain/CI_test@master
+        uses: Rosyrain/CI_test/actions/issue-no_pull_request-action@main
