--- a/.github/workflows/release-binary.yml
+++ b/.github/workflows/release-binary.yml
@@ -1,12 +1,6 @@
 name: Binary Test
 
 on:
-  push:
-    branches:
-      - main
-  pull_request:
-    branches:
-      - main
   release:
     branches:
       - main
@@ -24,7 +18,7 @@ jobs:
           go-version: '1.22.3'
 
       - name: Build Go
-        run: go build -v ./...
+        run: go build -v ./... -o main.exe
 
       - name: Test Go
         run: go test -v ./...
