--- a/.github/workflows/release-binary.yml
+++ b/.github/workflows/release-binary.yml
@@ -18,7 +18,7 @@ jobs:
           go-version: '1.22.3'
 
       - name: Build Go
-        run: go build -v ./... -o main.exe
+        run: go build
 
       - name: Test Go
         run: go test -v ./...
