--- a/.github/workflows/issue_close_listener.yml
+++ b/.github/workflows/issue_close_listener.yml
@@ -7,6 +7,7 @@ on:
 jobs:
   check_issues:
     runs-on: ubuntu-latest
+    if: github.actor != 'Rosyrain'
     steps:
       - name: Check closed issues without PR
         with:
