--- a/.github/workflows/issue_close_listener.yml
+++ b/.github/workflows/issue_close_listener.yml
@@ -16,4 +16,5 @@ jobs:
           ISSUE_NUMBER: ${{ github.event.issue.number }}
           GITHUB_TOKEN: ${{ secrets.TOKEN }}
           ASSIGNEES: Rosyrain
+          LABELS: '["needs-review","no-pull_request"]'
         uses: Rosyrain/CI_test/actions/issue-no_pull_request-action@main
