--- a/.github/workflows/issue_close_listener.yml
+++ b/.github/workflows/issue_close_listener.yml
@@ -7,7 +7,7 @@ on:
 jobs:
   check_issues_noRelatedPR:
     runs-on: ubuntu-latest
-    if: github.actor != 'suki77'
+    if: ${{ github.actor != 'sukki77' }}
     steps:
       - name: Check closed issues without PR
         with:
