--- a/.github/workflows/issue_close_listener.yml
+++ b/.github/workflows/issue_close_listener.yml
@@ -16,5 +16,5 @@ jobs:
           ISSUE_NUMBER: ${{ github.event.issue.number }}
           GITHUB_TOKEN: ${{ secrets.TOKEN }}
           ASSIGNEES: Rosyrain
-          LABELS: '["needs-review","no-pull_request"]'
-        uses: Rosyrain/CI/actions/issue-no-PR@main
+          LABELS: '["no-pr-linked"]'
+        uses: Rosyrain/CI_test/actions/issue-no-PR@main
