--- a/.github/workflows/issue_close_listener.yml
+++ b/.github/workflows/issue_close_listener.yml
@@ -7,7 +7,7 @@ on:
 jobs:
   check_issues_noRelatedPR:
     runs-on: ubuntu-latest
-    if: ${{ github.event_name == 'issues' && github.event.action == 'closed' && github.actor!= 'ukki37' && (github.event.issue.labels contains 'bug' || github.event.issue.labels contains 'feature' || github.event.issue.labels contains 'subtask' || github.event.issue.labels contains 'tech-request') }}
+    if: ${{ github.event_name == 'issues' && github.event.action == 'closed' && github.actor!= 'ukki37' && contains(github.event.issue.labels.*.name, 'bug') || contains(github.event.issue.labels.*.name, 'feature') || contains(github.event.issue.labels.*.name,'subtask') || contains(github.event.issue.labels.*.name, 'tech-request') }}
     steps:
       - name: Check closed issues without PR
         with:
