--- a/.github/workflows/issue_close_listener.yml
+++ b/.github/workflows/issue_close_listener.yml
@@ -5,11 +5,12 @@ on:
     types: [closed]
 
 jobs:
-  check_issues_noRelatedPR:
+  issue_no_pr:
     runs-on: ubuntu-latest
     if: ${{ github.event_name == 'issues' && github.event.action == 'closed' && github.actor!= 'sukki37' }}
     steps:
       - name: Check closed issues without PR
+        id: 1
         with:
           OWNER: ${{ github.repository_owner }}
           REPOSITORY: ${{ github.repository }}
@@ -19,3 +20,7 @@ jobs:
           LABELS: '["no-pr-linked"]'
           LABELS_NEED: '["tech-request","feature","Feature","kind/feature","attention/feature-incomplete","bug/ut","Bug fix","kind/bug","kind/subtask","kind/tech-request"]'
         uses: Rosyrain/CI_test/actions/issue-no-PR@main
+      - name: NOTICE FAIL RESULT
+        if: ${{ github.steps.1.outputs.send == 'yes' }}
+        run: |
+          echo "发送信息... ..."
