--- a/.github/workflows/issue_close_listener.yml
+++ b/.github/workflows/issue_close_listener.yml
@@ -10,7 +10,7 @@ jobs:
     if: ${{ github.event_name == 'issues' && github.event.action == 'closed' && github.actor!= 'sukki37' }}
     steps:
       - name: Check closed issues without PR
-        id: 1
+        id: step1
         with:
           OWNER: ${{ github.repository_owner }}
           REPOSITORY: ${{ github.repository }}
@@ -21,6 +21,6 @@ jobs:
           LABELS_NEED: '["tech-request","feature","Feature","kind/feature","attention/feature-incomplete","bug/ut","Bug fix","kind/bug","kind/subtask","kind/tech-request"]'
         uses: Rosyrain/CI_test/actions/issue-no-PR@main
       - name: NOTICE FAIL RESULT
-        if: ${{ github.steps.1.outputs.send == 'yes' }}
+        if: ${{ github.steps.step1.outputs.send == 'yes' }}
         run: |
           echo "发送信息... ..."
