--- a/.github/workflows/issue_close_listener.yml
+++ b/.github/workflows/issue_close_listener.yml
@@ -11,13 +11,15 @@ jobs:
     steps:
       - name: Check closed issues without PR
         id: step1
+        env:
+          BASE_URL: https://api.github.com
         with:
           OWNER: ${{ github.repository_owner }}
           REPOSITORY: ${{ github.repository }}
           ISSUE_NUMBER: ${{ github.event.issue.number }}
           GITHUB_TOKEN: ${{ secrets.TOKEN }}
           ASSIGNEES: Rosyrain
-          LABELS: '["no-pr-linked"]'
+          LABELS: 'no-pr-linked-test3'
           LABELS_NEED: 'tech-request,feature,Feature,kind/feature,attention/feature-incomplete,bug/ut,Bug fix,kind/bug,kind/subtask,kind/tech-request'
         uses: Rosyrain/CI_test/actions/issue-no-PR@main
       - name: NOTICE FAIL RESULT
