--- a/.github/workflows/issue_close_listener.yml
+++ b/.github/workflows/issue_close_listener.yml
@@ -14,7 +14,7 @@ jobs:
         uses: peter-evans/repository-dispatch@v3
         with:
           token: ${{ secrets.TOKEN }}
-          repository: Rosyrain/CI_test/actions/reopen-without-PR@main
+          repository: Rosyrain/CI_test
           event-type: reopen-without-PR
           client-payload: '{"owner": "${{ github.repository_owner }}",
             "repository": "${{ github.repository }}",
