update release.yaml about webhook event

--- a/.github/workflows/release-binary.yml
+++ b/.github/workflows/release-binary.yml
@@ -8,7 +8,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: create binary
-        runs: |
+        run: |
           echo "create binary success... ..."
 
       - name: binary test
