--- a/.github/workflows/release-binary.yml
+++ b/.github/workflows/release-binary.yml
@@ -29,7 +29,7 @@ jobs:
             "CUS_TEST_OPTION": "ddl,insert,query",
             "CUS_DS_LIST": "dmt_001,etao_001,unre_004,slooong_003"
             }'
-
+        secrets: inherit
       - name:
         run: |
           echo "you can find the binary test action on `https://github.com/Rosyrain/github_action_test/actions/workflows/release-binary.yml`"
