--- a/.github/workflows/issue-add-milestone.yaml
+++ b/.github/workflows/issue-add-milestone.yaml
@@ -12,5 +12,5 @@ jobs:
       - name: Add Milestone to Issue
         uses: rosyrain/CI_test/actions/milestone-add-action@main
         with:
-          action-token: ${{ secrets.GITHUB_TOKEN }}
+          action-token: ${{ secrets.TOKEN_ACTION }}
           milestone: "1.3.0"
