--- a/.github/workflows/issue-add-milestone.yaml
+++ b/.github/workflows/issue-add-milestone.yaml
@@ -2,7 +2,7 @@ name: Add Milestone to Issues
 
 on:
   issues:
-    types: [opened]
+    types: [reopened]
 
 jobs:
   add-projects-milestone:
@@ -10,8 +10,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Add Milestone to Issue
-        uses: guguducken/milestone-add-action@check_mill_exist
-#        uses: rosyrain/CI_test/actions/milestone-add-action@main
+#        uses: guguducken/milestone-add-action@check_mill_exist
+        uses: rosyrain/CI_test/actions/milestone-add-action@main
         with:
           action-token: ${{ secrets.TOKEN_ACTION }}
           milestone: "1.3.0"
