auto add milestone

--- a/.github/workflows/issue-add-milestone.yaml
+++ b/.github/workflows/issue-add-milestone.yaml
@@ -6,7 +6,7 @@ on:
 
 jobs:
   add-projects-milestone:
-    if: github.event.action == 'opened' && contains(github.event.issue.labels.*.name, 'kind/bug')
+    if: github.event.action == 'reopened' && contains(github.event.issue.labels.*.name, 'kind/bug')
     runs-on: ubuntu-latest
     steps:
       - name: Add Milestone to Issue
