--- a/.github/workflows/issue-add-milestone.yaml
+++ b/.github/workflows/issue-add-milestone.yaml
@@ -14,4 +14,4 @@ jobs:
         uses: Rosyrain/CI_test/actions/milestone-add-action@main
         with:
           action-token: ${{ secrets.TOKEN_ACTION }}
-          milestone: "1.3.0"
+          co-milestones: "1.3.0"
