--- a/.github/workflows/issue-add-milestone.yaml
+++ b/.github/workflows/issue-add-milestone.yaml
@@ -11,7 +11,7 @@ jobs:
     steps:
       - name: Add Milestone to Issue
 #        uses: guguducken/milestone-add-action@check_mill_exist
-        uses: Rosyrain/CI_test/actions/milestone-add-action@main
+        uses: Rosyrain/milestone-add-action@check_mill_exist
         with:
           action-token: ${{ secrets.TOKEN_ACTION }}
           co-milestones: "1.3.0"
