--- a/.github/workflows/issue-add-milestone.yaml
+++ b/.github/workflows/issue-add-milestone.yaml
@@ -14,4 +14,4 @@ jobs:
         uses: Rosyrain/milestone-add-action@main
         with:
           action-token: ${{ secrets.TOKEN_ACTION }}
-          co-milestones: "1.3.0"
+          milestone: "1.3.0"
