--- a/.github/workflows/rm-label.yaml
+++ b/.github/workflows/rm-label.yaml
@@ -23,4 +23,5 @@ jobs:
         if: ${{ failure() || cancelled() || steps.step1.outputs.send == 'yes' }}
         id: notification
         run: |
+          echo "assigned to {{ github.event.assignee.login }}"
           echo "delete label success... ..."
