--- a/.github/workflows/rm-label.yaml
+++ b/.github/workflows/rm-label.yaml
@@ -7,7 +7,7 @@ on:
 jobs:
   job1:
     runs-on: ubuntu-latest
-    if: {{ github.event.assignee.login != 'matrx-meow' }}
+    if: ${{ github.event.assignee.login != 'matrx-meow' }}
     steps:
       - name: Remove Labels
         uses: Rosyrain/CI_test/actions/rm-labels@main
@@ -23,5 +23,5 @@ jobs:
         if: ${{ failure() || cancelled() || steps.step1.outputs.send == 'yes' }}
         id: notification
         run: |
-          echo "assigned to {{ github.event.assignee.login }}"
+          echo "assigned to ${{ github.event.assignee.login }}"
           echo "delete label success... ..."
