--- a/.github/workflows/reopen-issue.yaml
+++ b/.github/workflows/reopen-issue.yaml
@@ -1,10 +1,10 @@
-name: Repository Dispatch (PR)
+name: Reopen Issue
 on:
   issues:
     types: [closed]
 
 jobs:
-  myEvent:
+  reopen-issue:
     runs-on: ubuntu-latest
     steps:
       - name: Output info
