--- a/.github/workflows/reopen-issue.yaml
+++ b/.github/workflows/reopen-issue.yaml
@@ -9,7 +9,7 @@ jobs:
     steps:
       - name: Check Issue
         id: step1
-        uses: Rosyrain/CI_test/actions/reopen-without-PR@main
+        uses: Rosyrain/CI/actions/reopen-without-PR@reopen-issue
         with:
           whitelist: 'sukki77,fengttt,aressu1985'
           issue_owner: ${{ github.event.issue.user.login }}
