--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -13,4 +13,5 @@ jobs:
     runs-on: ubuntu-latest
     if: ${{ false }}
     steps:
-      run: echo "This job should be skipped"
+      - name: echo info
+        run: echo "This job should be executed"
