add-labels-clusters

--- a/.github/workflows/add-labels-clusters.yaml
+++ b/.github/workflows/add-labels-clusters.yaml
@@ -59,6 +59,12 @@ jobs:
             ACTUAL_REMAIN_TIME="48h"
           fi
           
+          echo "ADD_LABELS_MOD=${ADD_LABELS_MOD}" 
+          echo "ACTUAL_NAMESPACE=${ACTUAL_NAMESPACE}"
+          echo "ACTUAL_CLUSTER_NAME=${ACTUAL_CLUSTER_NAME}" 
+          echo "ACTUAL_CREATOR=${ACTUAL_CREATOR}" 
+          echo "ACTUAL_REMAIN_TIME=${ACTUAL_REMAIN_TIME}"
+
           echo "ADD_LABELS_MOD=${ADD_LABELS_MOD}" << GITHUB_OUTPUT
           echo "ACTUAL_NAMESPACE=${ACTUAL_NAMESPACE}" << GITHUB_OUTPUT
           echo "ACTUAL_CLUSTER_NAME=${ACTUAL_CLUSTER_NAME}" << GITHUB_OUTPUT
