add-labels-clusters

--- a/.github/workflows/add-labels-clusters.yaml
+++ b/.github/workflows/add-labels-clusters.yaml
@@ -65,11 +65,11 @@ jobs:
           echo "ACTUAL_CREATOR=${ACTUAL_CREATOR}" 
           echo "ACTUAL_REMAIN_TIME=${ACTUAL_REMAIN_TIME}"
 
-          echo "ADD_LABELS_MOD=${ADD_LABELS_MOD}" << GITHUB_OUTPUT
-          echo "ACTUAL_NAMESPACE=${ACTUAL_NAMESPACE}" << GITHUB_OUTPUT
-          echo "ACTUAL_CLUSTER_NAME=${ACTUAL_CLUSTER_NAME}" << GITHUB_OUTPUT
-          echo "ACTUAL_CREATOR=${ACTUAL_CREATOR}" << GITHUB_OUTPUT
-          echo "ACTUAL_REMAIN_TIME=${ACTUAL_REMAIN_TIME}" << GITHUB_OUTPUT
+          echo "ADD_LABELS_MOD=${ADD_LABELS_MOD}" >> GITHUB_OUTPUT
+          echo "ACTUAL_NAMESPACE=${ACTUAL_NAMESPACE}" >> GITHUB_OUTPUT
+          echo "ACTUAL_CLUSTER_NAME=${ACTUAL_CLUSTER_NAME}" >> GITHUB_OUTPUT
+          echo "ACTUAL_CREATOR=${ACTUAL_CREATOR}" >> GITHUB_OUTPUT
+          echo "ACTUAL_REMAIN_TIME=${ACTUAL_REMAIN_TIME}" >> GITHUB_OUTPUT
 
       - name: Add Labels
         run: |
