--- a/.github/workflows/add-labels-clusters.yaml
+++ b/.github/workflows/add-labels-clusters.yaml
@@ -52,6 +52,7 @@ jobs:
           if [ -z "${{ inputs.creator }}" ]; then
             echo "creator is empty..."
             ACTUAL_CREATOR=""
+            exit 1
           fi
           
           if [ -z "${{ inputs.remain_time }}" ]; then
