--- a/.github/workflows/environment_secret_test.yaml
+++ b/.github/workflows/environment_secret_test.yaml
@@ -3,13 +3,15 @@ on:
   workflow_dispatch:
 
 jobs:
-  Test:
+  Environment:
     name: Pull_request Info
     runs-on: ubuntu-latest
     steps:
       - name: PR Info
         run: |
           echo "secrets.GITHUB_TOKEN=${{ secrets.GITHUB_TOKEN }}"
-      - name: CI_test secrets
-        uses: Rosyrain/CI_test/.github/workflow/environment_secrets_test.yaml@main
-        secrets: inherit
+
+  CI_test:
+    name: CI_test secrets
+    uses: Rosyrain/CI_test/.github/workflow/environment_secrets_test.yaml@main
+    secrets: inherit
