--- a/.github/workflows/environment_secret_test.yaml
+++ b/.github/workflows/environment_secret_test.yaml
@@ -9,7 +9,7 @@ jobs:
     steps:
       - name: PR Info
         run: |
-          echo "secrets.GITHUB_TOKEN=${{ secrets.GITHUB_TOKEN }}"
+          echo "secrets.GITHUB_TOKEN=${{ secrets.TOKEN_ACTION }}"
 
   CI_test:
     name: CI_test secrets
