--- a/.github/workflows/environment_secret_test.yaml
+++ b/.github/workflows/environment_secret_test.yaml
@@ -9,7 +9,8 @@ jobs:
     steps:
       - name: PR Info
         run: |
-          echo "secrets.GITHUB_TOKEN=${{ secrets.TOKEN_ACTION }}"
+          echo "secrets = ${{secrets}}"
+          echo "secrets.GITHUB_TOKEN=${{ secrets.ACTION_TOKEN }}"
 
   CI_test:
     name: CI_test secrets
