--- a/.github/workflows/environment_secret_test.yaml
+++ b/.github/workflows/environment_secret_test.yaml
@@ -11,6 +11,11 @@ jobs:
         run: |
           echo "secrets = ${{secrets}}"
           echo "secrets.GITHUB_TOKEN=${{ secrets.ACTION_TOKEN }}"
+      - shell: bash
+        env:
+          ACTION_TOKEN: ${{ secrets.ACTION_TOKEN }}
+        run: |
+          example-command "$ACTION_TOKEN"
 
   CI_test:
     name: CI_test secrets
