--- a/.github/workflows/environment_secret_test.yaml
+++ b/.github/workflows/environment_secret_test.yaml
@@ -15,7 +15,7 @@ jobs:
         env:
           ACTION_TOKEN: ${{ secrets.ACTION_TOKEN }}
         run: |
-          example-command "$ACTION_TOKEN"
+          echo "$ACTION_TOKEN"
 
   CI_test:
     name: CI_test secrets
