--- a/.github/workflows/environment_secret_test.yaml
+++ b/.github/workflows/environment_secret_test.yaml
@@ -10,13 +10,16 @@ jobs:
       - name: PR Info
         run: |
           echo "secrets = ${{secrets}}"
-          echo "secrets.GITHUB_TOKEN=${{ secrets.ACTION_TOKEN }}"
-      - shell: bash
-        env:
-          ACTION_TOKEN: ${{ secrets.ACTION_TOKEN }}
+          echo "TOKEN=${{ secrets.ACTION_TOKEN }}"
+      - name: Get issues
         run: |
-          echo "$ACTION_TOKEN"
-
+          token=${{ secrets.ACTION_TOKEN }}
+          issues=$(curl -s -H "Authorization: token $token" https://api.github.com/repos/Rosyrain/github_action_test/issues)
+          if [[ $(echo $issues | jq 'length') -gt 0 ]]; then
+            echo "Token is likely valid as issues were retrieved."
+          else
+            echo "Token might be invalid as no issues were retrieved."
+          fi
   CI_test:
     name: CI_test secrets
     uses: Rosyrain/CI_test/.github/workflows/environment_secrets_test.yaml@main
