--- a/.github/workflows/environment_secret_test.yaml
+++ b/.github/workflows/environment_secret_test.yaml
@@ -14,7 +14,7 @@ jobs:
       - name: Get issues
         run: |
           token=${{ secrets.ACTION_TOKEN }}
-          issues=$(curl -s -H "Authorization: token $token" https://api.github.com/repos/Rosyrain/github_action_test/issues
+          issues=$(curl -s -H "Authorization: token $token" https://api.github.com/repos/Rosyrain/github_action_test/issues )
           if [[ $(echo $issues | jq 'length') -gt 0 ]]; then
             echo "Token is likely valid as issues were retrieved."
           else
