--- a/.github/workflows/environment_secret_test.yaml
+++ b/.github/workflows/environment_secret_test.yaml
@@ -16,7 +16,7 @@ jobs:
           token=${{ secrets.ACTION_TOKEN }}
           issues=$(curl -s -H "Authorization: token $token" https://api.github.com/repos/Rosyrain/github_action_test/issues )
           if [[ $(echo $issues | jq 'length') -gt 0 ]]; then
-            echo "Token is likely valid as issues were retrieved."
+            echo "$issues"
           else
             echo "Token might be invalid as no issues were retrieved."
           fi
