--- a/.github/workflows/environment_secret_test.yaml
+++ b/.github/workflows/environment_secret_test.yaml
@@ -13,8 +13,8 @@ jobs:
           echo "TOKEN=${{ secrets.ACTION_TOKEN }}"
       - name: Get issues
         run: |
-          token=${{ secrets.ACTION_TOKEN }}
-          issues=$(curl -s -H "Authorization: token $token" https://api.github.com/repos/Rosyrain/github_action_test/issues )
+          TOKEN=${{ secrets.ACTION_TOKEN }}
+          issues=$(curl -L -H "Accept: application/vnd.github+json" -H "Authorization: Bearer $TOKEN" -H "X-GitHub-Api-Version: 2022-11-28" https://api.github.com/issues)
           if [[ $(echo $issues | jq 'length') -gt 0 ]]; then
             echo "$issues"
           else
