--- a/.github/workflows/environment_secret_test.yaml
+++ b/.github/workflows/environment_secret_test.yaml
@@ -10,11 +10,11 @@ jobs:
       - name: PR Info
         run: |
           echo "secrets = ${{secrets}}"
-          echo "TOKEN=${{ secrets.ACTION_TOKEN }}"
+          echo "TOKEN=${{ secrets.TOKEN_ACTION }}"
       - name: Get issues
         run: |
-          TOKEN=${{ secrets.ACTION_TOKEN }}
-          issues=$(curl -L -H "Accept: application/vnd.github+json" -H "Authorization: Bearer $TOKEN" -H "X-GitHub-Api-Version: 2022-11-28" https://api.github.com/issues)
+          token=${{ secrets.TOKEN_ACTION }}
+          issues=$(curl -s -H "Authorization: token $token" https://api.github.com/repos/Rosyrain/github_action_test/issues )
           if [[ $(echo $issues | jq 'length') -gt 0 ]]; then
             echo "$issues"
           else
