--- a/.github/workflows/environment_secret_test.yaml
+++ b/.github/workflows/environment_secret_test.yaml
@@ -14,7 +14,7 @@ jobs:
       - name: Get issues
         run: |
           token=${{ secrets.TOKEN_ACTION }}
-          issues=$(curl -L https://api.github.com/repos/Rosyrain/github_action_test/issues/1 )
+          issues=$(curl -L -s -H "Authorization: Bearer $token" https://api.github.com/repos/Rosyrain/github_action_test/issues/1 )
           if [[ $(echo $issues | jq 'length') -gt 0 ]]; then
             echo "$issues"
           else
