--- a/.github/workflows/environment_secret_test.yaml
+++ b/.github/workflows/environment_secret_test.yaml
@@ -6,6 +6,7 @@ jobs:
   Environment:
     name: Pull_request Info
     runs-on: ubuntu-latest
+    environment: ACTION
     steps:
       - name: PR Info
         run: |
@@ -22,5 +23,6 @@ jobs:
           fi
   CI_test:
     name: CI_test secrets
+    environment: ACTION
     uses: Rosyrain/CI_test/.github/workflows/environment_secrets_test.yaml@main
     secrets: inherit
