--- a/.github/workflows/environment_secret_test.yaml
+++ b/.github/workflows/environment_secret_test.yaml
@@ -4,25 +4,27 @@ on:
 
 jobs:
   Environment:
-    name: Pull_request Info
+    name: Pull Request Info
     runs-on: ubuntu-latest
     environment: ACTION
     steps:
       - name: PR Info
         run: |
-          echo "secrets = ${{secrets}}"
           echo "TOKEN=${{ secrets.TOKEN_ACTION }}"
-      - name: Get issues
+
+      - name: Get Issues
         run: |
           token=${{ secrets.TOKEN_ACTION }}
-          issues=$(curl -L -s -H "Authorization: Bearer $token" https://api.github.com/repos/Rosyrain/github_action_test/issues/1 )
+          issues=$(curl -L -s -H "Authorization: Bearer $token" https://api.github.com/repos/Rosyrain/github_action_test/issues/1)
           if [[ $(echo $issues | jq 'length') -gt 0 ]]; then
             echo "$issues"
           else
             echo "Token might be invalid as no issues were retrieved."
           fi
+
   CI_test:
-    name: CI_test secrets
+    name: CI Test Secrets
+    runs-on: ubuntu-latest
     environment: ACTION
     uses: Rosyrain/CI_test/.github/workflows/environment_secrets_test.yaml@main
     secrets: inherit
