--- a/.github/workflows/environment_secret_test.yaml
+++ b/.github/workflows/environment_secret_test.yaml
@@ -21,3 +21,8 @@ jobs:
           else
             echo "Token might be invalid as no issues were retrieved."
           fi
+
+  CI_test:
+    name: CI Test Secrets
+    uses: Rosyrain/CI_test/.github/workflows/environment_secrets_test.yaml@main
+    secrets: inherit
